Atualização de dados.
Inserindo dados básicos, corretos.

--- a/index.html
+++ b/index.html
@@ -184,20 +184,20 @@
 <body>
   <div class="moo-business-card">
     <header>
-      <h1>Peter Lyons</h1>
+      <h1>Moraes, Rodrigo Otávio</h1>
     </header>
-    <h2>node.js expert consultant</h2>
-    <img src="http://peterlyons.com/images/pl_lizm_drawing.jpg">
+    <h2>Analista de Sistemas</h2>
+    <img src="https://www.gravatar.com/avatar/b98683c8d6b227a2b281cf05562cfd99?s=200">
     <div class="contact-info-left">
-      <h3>pete@peterlyons.com</h3>
-      <h3>http://peterlyons.com</h3>
+      <h3>rom232@gmail.com</h3>
     </div>
     <div class="contact-info-right">
-      <h3>917-796-6412</h3>
-      <h3>@focusaurus</h3>
+      <h3>+55 61 981.915.232</h3>
+      <h3>@madpunchy (twitter)</h3>
     </div>
   </div>
 
 </body>
 
 </html>
+
