--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
     <div class="contact-info-right">
       <h3>+55 61 981.915.232</h3>
       <h3>@madpunchy (twitter)</h3>
+      <h4><a href="rom232.vcf">Download contato</a></h4>
     </div>
   </div>
 
