--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
       <h3>rom232@gmail.com</h3>
     </div>
     <div class="contact-info-right">
-      <h3>+55 61 981.915.232</h3>
-      <h3>@madpunchy (twitter)</h3>
+      <h3><a href="tel:+5561981915232">+55 61 981.915.232</a></h3>
+      <h3><a href="https://twitter.com/madpunchy">@madpunchy</a></h3>
       <h4><a href="rom232.vcf">Download contato</a></h4>
     </div>
   </div>
