--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <h2>Analista de Sistemas</h2>
     <img src="https://www.gravatar.com/avatar/b98683c8d6b227a2b281cf05562cfd99?s=200">
     <div class="contact-info-left">
-      <h3>rom232@gmail.com</h3>
+      <h3><a href="mailto:rom232@gmail.com">rom232@gmail.com</a></h3>
     </div>
     <div class="contact-info-right">
       <h3><a href="tel:+5561981915232">+55 61 981.915.232</a></h3>
